[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/GFX/Player/rect.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Movement.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/RectangleRayCasts.gd" type="Script" id=3]
[ext_resource path="res://Assets/GFX/Player/Eyes.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 48, 24 )

[sub_resource type="Animation" id=14]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Move"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ), Vector2( 0, 4 ), Vector2( 0, 0 ) ]
}

[node name="Rectangle" type="KinematicBody2D"]
collision/safe_margin = 0.05
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite"]
position = Vector2( 0, -8 )
frames = SubResource( 12 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[node name="RayCasts" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="RightRC" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, 22.0865 )
enabled = true
cast_to = Vector2( 52, 0 )
collision_mask = 2
collide_with_areas = true

[node name="LeftRC" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, 22.0865 )
enabled = true
cast_to = Vector2( -52, 0 )
collision_mask = 2
collide_with_areas = true

[node name="TopRightRC" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, -24 )
enabled = true
cast_to = Vector2( 52, 0 )
collision_mask = 2
collide_with_areas = true

[node name="TopLeftRC" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, -24 )
enabled = true
cast_to = Vector2( -52, 0 )
collision_mask = 2
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.83546
anims/Idle = SubResource( 14 )
anims/Move = SubResource( 15 )
